# graphic_api

./: .gitignore  CMakeLists.txt  README.md  draw_ins.cpp  draw_ins.h  lgapi.cpp  lgapi.h  lgapi_ref.cpp  main.cpp  scene.cpp  scene.h
bash_scripts/: build_and_run.bash  enable_openMP.bash  run.bash
doc/: task3.tex
parse_obj/: OBJparsing.cpp  OBJparsing.h
shaders/: shaders.cpp  shaders.h
subBuffer/: sub_buf.cpp  sub_buf.h
tests/: tests.cpp  tests.h
